# ghostimg

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  Justfile  install.ps1  install.sh
.github/workflows/: release.yml
include/: gi_args.h  gi_batch.h  gi_endian.h  gi_image.h  gi_io.h  gi_jpeg.h  gi_platform.h  gi_png.h  gi_ui.h  gi_ui_report.h  gi_webp.h
src/: args.c  batch.c  io.c  jpeg.c  main.c  platform.c  png.c  ui.c  ui_report.c  webp.c
